# urai

./: .gitignore  .stan.toml  .tmuxp.yaml  .travis.yml  CHANGELOG.md  OpenGraph.dhall  README.md  appveyor.yml  urai.cabal
.github/workflows/: ci.yml
app/: Main.hs
src/: Urai.hs
src/Urai/Config/: ConfigWriter.hs  Deriving.hs  Features.hs  Meta.hs  Module.hs  OpenGraph.hs  Social.hs  TwitterCard.hs  Util.hs
