cabal-version:       2.4
name:                urai
version:             0.0.0.1
synopsis:            A static website generator with focus on structured writing
description:         A static website generator with focus on structured writing
homepage:            https://github.com/navilan/urai
bug-reports:         https://github.com/navilan/urai/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Navilan
maintainer:          Navilan <navilan@folds.in>
copyright:           2020 Navilan
category:            Web
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.1

source-repository head
  type:                git
  location:            https://github.com/navilan/urai.git

common common-options
  build-depends:       base ^>= 4.14.0.0
                     , relude

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Urai
                       Urai.Config.ConfigWriter
                       Urai.Config.Meta
                       Urai.Config.Module
                       Urai.Config.TwitterCard
                       Urai.Config.OpenGraph
                       Urai.Config.Features
                       Urai.Config.Social
  build-depends:       text               ^>= 1.2.3.0,
                       shake              ^>= 0.19.1,
                       dhall              ^>= 1.35.0,
                       either             ^>= 5.0.1.1,
                       extra              ^>= 1.7.4,
                       pandoc             ^>= 2.10.1,
                       prettyprinter      ^>= 1.7.0,
                       filepath           ^>= 1.4.2.1,
                       filepattern        ^>= 0.1.2,
                       text-manipulate    ^>= 0.2.0.1,
                       containers         ^>= 0.6.2.1,
                       ordered-containers ^>= 0.2.2,
                       base16-bytestring   == 0.1.1.7,

executable urai
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       urai,
                       text               ^>= 1.2.3.0,
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite urai-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       urai
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark urai-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , urai
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
